--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 joblib==1.4.2
 plotly>=5.24.1
 streamlit>=1.44.1
-pandas>=2.2.3
+numpy>=2.0.2
+pandas>=2.2.2
 scikit-learn>=1.6.1
 statsmodels>=0.14.4
